apps/satmonitor/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satmonitor-dev
  namespace: satmonitor-dev
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik

  rules:
    - host: satmonitor.local
      http:
        paths:

          #backend-login
          - path: /api/v1/auth/
            pathType: Prefix
            backend:
              service:
                name: satmonitor-backend-login
                port:
                  number: 8080

          # Frontend
          - path: /app/
            pathType: Prefix
            backend:
              service:
                name: satmonitor-frontend
                port:
                  number: 80
          # Geoserver
          - path: /geoserver
            pathType: Prefix
            backend:
              service:
                name: satmonitor-geoserver
                port:
                  number: 8080
          # KEYCLOAK
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

          # SONAR
          - path: /sonar
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
